--- a/css/style.css
+++ b/css/style.css
@@ -1,64 +1,122 @@
-/* style.css */
+/* 폰트 */
+@font-face {
+    font-family: 'HakgyoansimNadeuriTTF-N';
+    src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/2408-5@1.0/HakgyoansimNadeuriTTF-B.woff2') format('woff2');
+    font-weight: 400;
+    font-style: normal;
+    font-size: 13pt;
+}
+
+@font-face {
+    font-family: 'HakgyoansimNadeuriTTF-B';
+    src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/2408-5@1.0/HakgyoansimNadeuriTTF-B.woff2') format('woff2');
+    font-weight: 700;
+    font-style: normal;
+    font-size: 14pt;
+}
 
 /* 전체 레이아웃 */
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'HakgyoansimNadeuriTTF-N', sans-serif;
     text-align: center;
     margin-top: 50px;
 }
 
-/* 메뉴 스타일 */
+/* 메뉴 */
 .menu {
-    display: flex;
+    width: 560px;
+    height: 42px;
+    padding: 2px;
+    background: rgba(0, 0, 0, 0.05);
+    border-radius: 14px;
+    justify-content: flex-start;
+    align-items: flex-start;
+    display: inline-flex;
+}
+
+.menuBtn {
+    flex: 1 1 0;
+    height: 38px;
+    padding: 8px 24px;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.05);
+    border-radius: 12px;
     justify-content: center;
-    background-color: #4CAF50;
-    padding: 15px 0;
-}
-
-.menu button {
-    background: none;
+    align-items: center;
+    gap: 2px;
+    display: flex;
+    font-family: 'HakgyoansimNadeuriTTF-N', sans-serif;
+    font-weight: 400;
+    font-size: 13pt;
     border: none;
-    color: white;
-    font-size: 16px;
-    padding: 10px 20px;
     cursor: pointer;
-    transition: background-color 0.3s;
 }
 
-.menu button:hover {
+.menuBtn.selected {
+    background-color: #2DA629; /* 선택된 버튼 배경색 */
+    color: #ffffff; /* 선택된 버튼 글자색 */
+    font-weight: 700;
+}
+
+.menuBtn.unselected {
+    background-color: rgba(0, 0, 0, 0.1); /* 선택되지 않은 버튼 배경색 */
+    color: rgba(0, 0, 0, 0.6); /* 선택되지 않은 버튼 글자색 */
+    font-weight: 400;
+}
+
+.menuBtn:hover.unselected {
+    background-color: #d3d3d3;
+}
+
+.menuBtn:hover.selected {
     background-color: #45a049;
 }
 
-/* 콘텐츠 영역 */
+/* 콘텐츠 */
 .content {
     margin-top: 20px;
     padding: 0 20px;
 }
 
-/* 공통 제목 스타일 */
-h2 {
-    font-size: 24px;
-    font-weight: bold;
-    margin-bottom: 20px;
-    text-align: center;
-}
-
-/* 테이블 스타일 */
+/* 테이블 */
 table {
-    margin: 0 auto;
     border-collapse: collapse;
     width: 80%;
-    margin-bottom: 20px;
+    margin: 0 auto 20px;
+    border-radius: 10px;
+    overflow: hidden;
 }
 
 th, td {
-    border: 1px solid #ccc;
     padding: 10px;
     text-align: center;
+    border: 1px solid #ffffff;
 }
 
 th {
-    background-color: #f2f2f2;
+    font-family: 'HakgyoansimNadeuriTTF-B', sans-serif;
+    background-color: rgba(163, 208, 159, 0.8);
+    font-size: 14pt;
+}
+
+td {
+    font-family: 'HakgyoansimNadeuriTTF-N', sans-serif;
+    background-color: #eef3eb;
+}
+
+table th:first-child {
+    border-top-left-radius: 10px;
+}
+
+table th:last-child {
+    border-top-right-radius: 10px;
+}
+
+table tr:last-child td:first-child {
+    border-bottom-left-radius: 10px;
+}
+
+table tr:last-child td:last-child {
+    border-bottom-right-radius: 10px;
 }
 
 /* 삭제 버튼 */
@@ -68,15 +126,16 @@ th {
     font-weight: bold;
 }
 
-/* 공통 버튼 스타일 */
+/* 공통 버튼 */
 button {
+    font-family: 'HakgyoansimNadeuriTTF-N', sans-serif;
     padding: 10px 20px;
     cursor: pointer;
     background-color: #4CAF50;
     color: #fff;
     border: none;
     border-radius: 5px;
-    font-size: 14px;
+    font-size: 15pt;
 }
 
 button:hover {
