--- a/css/style.css
+++ b/css/style.css
@@ -165,9 +165,16 @@ button:hover {
     color: #de0000;
 }
 
+.regBtn {
+    padding: 8px 15px;
+    cursor: pointer;
+    border: none;
+    border-radius: 7px;
+    font-size: 11pt;
+}
+
 input[type="number"], input[type="text"] {
-    width: 100%;
+    width: 200px;
     padding: 5px;
-    text-align: center;
     box-sizing: border-box;
 }
