테이블 css 수정
- 신청자리스트 테이블 잔여인원 0명 시 마감의 의미로 회색배경이 되도록 수정
- 휴대폰에서의 시안성을 위해 테이블 css 수정
- 입금대기 잔여시간 색상 변경

--- a/css/style.css
+++ b/css/style.css
@@ -195,4 +195,23 @@ input[type="number"], input[type="text"] {
     .menuBtn {
         width: 100%;
     }
+    .gray-background {
+        background-color: lightgray;
+    }
+
+    .applicantTable {
+        width: auto;
+        table-layout: fixed;
+    }
+
+    .applicantTable th, td {
+        width: auto;
+        white-space: nowrap;
+    }
+
+    .applicantTable td {
+        max-width: 100%;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
 }
