--- a/css/style.css
+++ b/css/style.css
@@ -198,7 +198,7 @@ input[type="number"], input[type="text"] {
         background-color: lightgray;
     }
 
-    .registerTable {
+    .registerTable, .settingTable {
         width: 100%;
     }
 
